[workspace]
members = ["dash", "dash-network", "dash-network-ffi", "hashes", "internals", "fuzz", "rpc-client", "rpc-json", "rpc-integration-test", "key-wallet", "key-wallet-ffi", "key-wallet-manager", "dash-spv", "dash-spv-ffi", "test-utils"]
resolver = "2"

[workspace.package]
version = "0.39.6"

[patch.crates-io]
dashcore_hashes = { path = "hashes" }

[profile.release]
# Default to unwinding for most crates

[profile.dev]
# Default to unwinding for most crates

