[workspace]
members = ["dash", "dash-network", "dash-network-ffi", "hashes", "internals", "fuzz", "rpc-client", "rpc-json", "rpc-integration-test", "key-wallet", "key-wallet-ffi", "key-wallet-manager", "dash-spv", "dash-spv-ffi", "test-utils"]
resolver = "2"

[workspace.package]
version = "0.40.0"

[patch.crates-io]
dashcore_hashes = { path = "hashes" }
# Use fixed version of elliptic-curve-tools with DefaultIsZeroes trait bound
elliptic-curve-tools = { git = "https://github.com/mikelodder7/elliptic-curve-tools", branch = "main" }

[profile.release]
# Default to unwinding for most crates

[profile.release.package.dash-fuzz]
# Disable LTO and keep debuginfo for honggfuzz to avoid link GC issues
lto = false
codegen-units = 16
debug = 1
panic = "unwind"

[profile.dev]
# Default to unwinding for most crates
