[package]
name = "dash-spv-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Dash Core Developers"]
license = "MIT"
description = "FFI bindings for the Dash SPV client"
repository = "https://github.com/dashpay/rust-dashcore"

[lib]
name = "dash_spv_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
dash-spv = { path = "../dash-spv" }
dashcore = { path = "../dash", package = "dashcore" }
libc = "0.2"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
hex = "0.4"
env_logger = "0.10"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
env_logger = "0.10"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"