[package]
name = "dash-spv"
version = "0.1.0"
edition = "2021"
authors = ["Dash Core Team"]
description = "Dash SPV (Simplified Payment Verification) client library"
license = "MIT"
repository = "https://github.com/dashpay/rust-dashcore"
rust-version = "1.80"

[dependencies]
# Core Dash libraries
dashcore = { path = "../dash", features = ["std", "serde", "core-block-hash-use-x11", "message_verification", "bls"] }
dashcore_hashes = { path = "../hashes" }

# BLS signatures
blsful = "2.5"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
rand = "0.8"
hex = "0.4"
indexmap = "2.0"

# Terminal UI
crossterm = "0.27"

# DNS
trust-dns-resolver = "0.23"

# Also add log to main dependencies for consistency
log = "0.4"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
env_logger = "0.10"
hex = "0.4"

[[bin]]
name = "dash-spv"
path = "src/main.rs"

[lib]
name = "dash_spv"
path = "src/lib.rs"