[package]
name = "key-wallet-ffi"
version = "0.39.6"
authors = ["The Dash Core Developers"]
edition = "2021"
description = "FFI bindings for key-wallet library"
keywords = ["dash", "wallet", "ffi", "bindings"]
readme = "README.md"
license = "CC0-1.0"

[lib]
name = "key_wallet_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = []

[dependencies]
key-wallet = { path = "../key-wallet", default-features = false, features = ["std"] }
dash-network-ffi = { path = "../dash-network-ffi" }
secp256k1 = { version = "0.30.0", features = ["global-context"] }
uniffi = { version = "0.29.3", features = ["cli"] }
thiserror = "2.0.12"

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.29.3", features = ["bindgen-tests"] }