[package]
name = "key-wallet-ffi"
version = "0.39.6"
authors = ["The Dash Core Developers"]
edition = "2021"
description = "FFI bindings for key-wallet library"
keywords = ["dash", "wallet", "ffi", "bindings"]
readme = "README.md"
license = "CC0-1.0"

[lib]
name = "key_wallet_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = []
bip38 = ["key-wallet/bip38"]
bincode = ["key-wallet-manager/bincode", "key-wallet/bincode"]

[dependencies]
key-wallet = { path = "../key-wallet", default-features = false, features = ["std"] }
key-wallet-manager = { path = "../key-wallet-manager", features = ["std"] }
dashcore = { path = "../dash", features = ["std"] }
dash-network = { path = "../dash-network" }
secp256k1 = { version = "0.30.0", features = ["global-context"] }
thiserror = "2.0.12"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3.0"
hex = "0.4"