[package]
name = "key-wallet-manager"
version = "0.1.0"
authors = ["The Dash Core Developers"]
edition = "2021"
description = "High-level wallet management for Dash using key-wallet primitives"
keywords = ["dash", "wallet", "transaction", "utxo", "hdwallet"]
readme = "README.md"
license = "CC0-1.0"

[features]
default = ["std"]
std = ["key-wallet/std", "dashcore/std", "dashcore_hashes/std", "secp256k1/std"]
serde = ["dep:serde", "key-wallet/serde", "dashcore/serde"]

[dependencies]
key-wallet = { path = "../key-wallet", default-features = false }
dashcore = { path = "../dash", default-features = false }
dashcore_hashes = { path = "../hashes", default-features = false }
secp256k1 = { version = "0.30.0", default-features = false, features = ["recovery"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(bench)', 'cfg(fuzzing)'] }