[package]
name = "key-wallet"
version = "0.39.6"
authors = ["The Dash Core Developers"]
edition = "2021"
description = "Key derivation and wallet functionality for Dash"
keywords = ["dash", "wallet", "bip32", "bip39", "hdwallet"]
readme = "README.md"
license = "CC0-1.0"

[features]
default = ["std"]
std = ["bitcoin_hashes/std", "secp256k1/std", "bip39/std", "getrandom"]
serde = ["dep:serde", "bitcoin_hashes/serde", "secp256k1/serde"]

[dependencies]
bitcoin_hashes = { version = "0.14.0", default-features = false }
secp256k1 = { version = "0.29.0", default-features = false, features = ["hashes", "recovery"] }
bip39 = { version = "2.0.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
base58ck = { version = "0.1.0", default-features = false }
bitflags = { version = "2.6", default-features = false }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"