[package]
name = "dashcore-test-utils"
version = "0.1.0"
edition = "2021"
authors = ["The Dash Core developers"]
license = "MIT"
repository = "https://github.com/dashpay/rust-dashcore/"
documentation = "https://docs.rs/dashcore-test-utils/"
description = "Test utilities for rust-dashcore workspace"

[dependencies]
dashcore = { path = "../dash" }
dashcore_hashes = { path = "../hashes" }
hex = "0.4"
rand = "0.8"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["time"], optional = true }

[features]
async = ["tokio"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
